Bug 831279 - Part 2: Port hg cset 978e9865042: Eliminate a few nullptr-to-bool conversions to avoid a clang warning (which we upgrade to error) in some clang revs.  No bug, r=sparky, a=overholt

--HG--
extra : rebase_source : 6b45c8e1dd07449a5ebc34704c19e05fe155f628