layout/style/nsTransitionManager.cpp
@@ -861,7 +861,7 @@ nsTransitionManager::GetElementTransitions(dom::Element *aElement,
     et = new ElementTransitions(aElement, propName, this,
       mPresContext->RefreshDriver()->MostRecentRefresh());
     nsresult rv = aElement->SetProperty(propName, et,
-                                        ElementTransitionsPropertyDtor, nullptr);
+                                        ElementTransitionsPropertyDtor, false);
     if (NS_FAILED(rv)) {
       NS_WARNING("SetProperty failed");
       delete et;
